--- a/react-app/src/components/NavBar/css/index.css
+++ b/react-app/src/components/NavBar/css/index.css
@@ -1,18 +1,118 @@
 .nav-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 49px;
-    background-color: white;
-    padding: 0px 20px;
-    width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	height: 49px;
+	background-color: white;
+	padding: 0px 20px;
+	/* width: 100%; */
 }
 
 .nav-logo {
-    height: 32px;
+	height: 32px;
+    border: none;
 }
 
 .nav-login-signup-container {
-    display: flex;
+	display: flex;
+	box-sizing: border-box;
+}
+
+.profile-toggle {
+	width: fit-content;
+	min-width: 4.5rem;
+	height: 2rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 2px 0px;
+	border-radius: 4px;
+	cursor: pointer;
+	position: relative;
+	box-sizing: border-box;
+}
+
+.profile-toggle:hover,
+.active {
+	border: solid 1px rgb(242, 243, 245);
+	box-sizing: border-box;
+}
+
+i {
+	width: 20px;
+	height: 20px;
+}
+
+.profile-menu-container {
+	position: absolute;
+	top: 3rem;
+	right: 0px;
+	box-sizing: border-box;
+}
+
+.profile-menu {
+	background-color: white;
+	border-radius: 4px;
+	border: solid 1px rgb(237, 239, 241);
+	font-weight: 400;
+	color: rgb(28, 28, 28);
+	font-size: 1rem;
+	padding: 8px 0px;
+	width: 252px;
+	display: flex;
+	justify-content: flex-start;
+	flex-direction: column;
+	box-sizing: border-box;
+}
+
+.auth-container-profile-menu {
+	display: flex;
+}
+
+.profile-menu-el {
+	height: 40px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 0px 20px;
+	box-sizing: border-box;
+}
+
+.profile-menu-el:hover {
+	background-color: rgb(235, 235, 235);
+	/* box-sizing: border-box; */
+}
+
+.profile-menu-user-info {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	box-sizing: border-box;
+}
+
+.profile-menu-profile-image-container {
+	margin-right: 5px;
+}
+
+.profile-menu-profile-image {
+	height: 24px;
+	width: 24px;
+	border-radius: 4px;
+}
+
+.profile-menu-username {
+	font-size: 0.75rem;
+	font-weight: 500;
+}
+
+.profile-menu-karma {
+	font-size: 0.75rem;
+	color: rgb(168, 170, 171);
+	font-weight: 500;
+}
+
+.profile-menu-user-stats {
+	padding-right: 30px;
 }
