--- a/react-app/src/components/NavBar/css/index.css
+++ b/react-app/src/components/NavBar/css/index.css
@@ -6,6 +6,8 @@
 	height: 49px;
 	background-color: white;
 	padding: 0px 20px;
+	border-bottom: solid 1px rgb(237, 239, 241);
+	max-width: 100%;
 	/* width: 100%; */
 }
 
@@ -42,7 +44,7 @@
 i {
 	width: 20px;
 	height: 20px;
-    margin-right: 10px;
+	margin-right: 10px;
 }
 
 .profile-menu-container {
@@ -65,8 +67,8 @@ i {
 	justify-content: flex-start;
 	flex-direction: column;
 	box-sizing: border-box;
-    max-height: 80%;
-    overflow-y: scroll;
+	max-height: 80%;
+	overflow-y: scroll;
 }
 
 .auth-container-profile-menu {
@@ -81,11 +83,11 @@ i {
 	padding: 0px 0px 0px 20px;
 	box-sizing: border-box;
 	color: rgb(28, 28, 28);
-    font-weight: 500;
+	font-weight: 500;
 }
 
 .user-links {
-    padding-left: 52px;
+	padding-left: 52px;
 }
 
 .profile-menu-section-title {
@@ -97,7 +99,7 @@ i {
 	box-sizing: border-box;
 	color: rgb(120, 124, 126);
 	font-weight: 400;
-    font-size: 1rem;
+	font-size: 1rem;
 	cursor: auto;
 }
 
@@ -144,12 +146,11 @@ a {
 	color: rgb(28, 28, 28);
 }
 
-
 .no-copyright {
-    color: rgb(135, 138, 140);
-    font-size: .75rem   ;
-    text-align: center;
-    font-weight: 400;
-    cursor: auto;
-    line-height: 16px;
+	color: rgb(135, 138, 140);
+	font-size: 0.75rem;
+	text-align: center;
+	font-weight: 400;
+	cursor: auto;
+	line-height: 16px;
 }
