posts on user page now have links

--- a/react-app/src/components/Profile/css/index.css
+++ b/react-app/src/components/Profile/css/index.css
@@ -183,7 +183,7 @@
 	color: orange;
 }
 .downvoted {
-	color: blue;
+	color: rgb(113,147,255);
 }
 
 .image-box {
@@ -192,6 +192,7 @@
 	border: solid 1px black;
 	border-radius: 4px;
 	background-color: rgb(248, 248, 248);
+	cursor: pointer;
 }
 
 .profile-post-info-container {
@@ -223,4 +224,26 @@
 
 .image-box {
 	object-fit: cover;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+}
+.fa-align-justify, .fa-link {
+	margin: 0px;
+	padding: 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.fa-arrow-up-right-from-square {
+	position: absolute;
+	z-index: 2;
+	bottom: 0;
+	right: 0%;
+	margin: 0px;
+	padding: 0px;
+	color: rgb(16,129,213);
 }
