--- a/react-app/src/components/PostForm/css/index.css
+++ b/react-app/src/components/PostForm/css/index.css
@@ -1,10 +1,26 @@
 .post-form-container {
-    /* width: 100%; */
-    /* min-width: 100%; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 614px;
+	width: fit-content;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	/* align-items: flex-start; */
+	margin: auto;
+
+	/* background-color: rgb(255, 255, 255); */
+}
+
+.post-form {
+	background-color: rgb(255, 255, 255);
+	padding: 10px 10px;
+	width: fit-content;
+	border-radius: 4px;
+	min-width: 614px;
+}
+
+.post-form-flex {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .input-types {
@@ -14,19 +30,30 @@
 	align-items: center;
 	height: 40px;
 	max-width: 740px;
-     min-width: 614px;
+	min-width: 614px;
+}
 
+.page-title-container {
+	border-bottom: solid 1px rgb(255, 255, 255);
+	margin-bottom: 10px;
+}
+
+.page-tutle {
+	margin-bottom: 15px;
 }
 
 .input-type {
 	cursor: pointer;
 	padding: 0px 8px;
-	margin: 0px 5px;
+
 	height: 100%;
 	font-weight: 500;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	border: solid 1px rgb(237, 239, 241);
+	border-bottom: solid 2px rgba(0, 0, 0, 0);
+	border-radius: 4px;
 }
 
 .input-type:hover {
@@ -38,19 +65,148 @@
 	color: rgb(0, 121, 211);
 }
 
-
 .post-title {
-    max-width: 740px;
-    width: 100%;
-}
-.title, .text-area {
-    max-width: 100% ;
-    width: 100%;
-    box-sizing: border-box;
+	max-width: 740px;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	box-sizing: border-box;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 10px 0px;
 }
 
+.title {
+	padding: 8px 68px 8px 16px;
+	box-sizing: border-box;
+	resize: none;
+	width: 100%;
+	height: 100%;
+	outline: none;
+}
 .text-area {
-    min-height: 122px;
-    resize: vertical;
-    padding: 8px 16px;
+	min-height: 122px;
+	resize: vertical;
+	padding: 8px 16px;
+}
+
+.title,
+.text-area {
+	max-width: 100%;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	min-height: fit-content;
+	border-radius: 4px;
+	border: solid 1px rgb(237, 239, 241);
+}
+
+.title:focus,
+.text-area:focus {
+	border: solid 1px black;
+}
+
+.link-input {
+	padding: 8px 16px;
+	min-height: 48px;
+	box-sizing: border-box;
+	width: 100%;
+	height: fit-content;
+	overflow-x: hidden;
+	overflow-y: hidden;
+	word-wrap: break-word;
+	white-space: pre-wrap;
+	resize: none;
+	border-radius: 4px;
+	border: solid 1px rgb(237, 239, 241);
+}
+
+.character-count {
+	position: absolute;
+	font-size: 10px;
+	font-weight: 700;
+	z-index: 2;
+
+	right: 5px;
+	bottom: 15px;
+}
+
+.choose-subreddit-container {
+	margin-bottom: 10px;
+}
+.choose-subreddit {
+	border: solid 1px rgb(237, 239, 241);
+	border-radius: 4px;
+	width: 298px;
+	height: 38px;
+	box-sizing: border-box;
+}
+
+.image-form-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.fa-align-justify,
+.fa-image,
+.fa-link {
+	padding: 0px;
+	margin-right: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.file-input,
+.cancel-button {
+	cursor: pointer;
+	border-radius: 9999px;
+	border: solid 1px rgb(0, 121, 211);
+	padding: 4px 16px;
+	color: rgb(0, 121, 211);
+	font-weight: 700;
+	font-size: 14px;
+}
+
+.cancel-button {
+	background-color: white;
+	margin-right: 10px;
+}
+
+.file-input:hover,
+.cancel-button:hover {
+	background-color: rgba(0, 121, 211, 0.05);
+}
+
+input {
+	display: none;
+}
+
+.submit-post-container {
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 10px;
+}
+.submit-post-button {
+	background-color: rgb(0, 121, 211);
+	color: white;
+	border-radius: 9999px;
+	padding: 4px 16px;
+	cursor: pointer;
+	border: none;
+	height: 32px;
+	width: 63px;
+	box-sizing: border-box;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: 700;
+	font-size: 14px;
+}
+
+.disabled {
+	background-color: rgb(131, 131, 131);
+	cursor: auto;
 }
