Addes some more styling to nav and some conditional logic so you can not show another users post page or post button

--- a/react-app/src/components/Profile/css/index.css
+++ b/react-app/src/components/Profile/css/index.css
@@ -1,10 +1,11 @@
 .user-profile-tabs {
 	background-color: rgb(255, 255, 255);
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	height: 40px;
-
+	padding: 0px 10px;
+	
 }
 
 .profile-tab-link {
@@ -27,10 +28,10 @@
 }
 
 .user-info-card {
-	height: 300px;
-	width: 312px;
-	padding: 12px;
+	height: fit-content;
+	min-width: 312px;
 	box-sizing: border-box;
+	padding: 12px;
 	position: relative;
 	border-radius: 4px;
 	background-color: white;
@@ -38,6 +39,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	gap: 15px;
 }
 
 .blue-block {
@@ -70,6 +72,10 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+}
+
+.h3-username {
+	margin: 0px;
 }
 
 .karma-cakeday-container {
@@ -146,7 +152,7 @@
 	border: solid 1px rgb(204, 204, 204);
 	background-color: white;
 	border-radius: 4px;
-	
+
 	display: flex;
 	margin-right: 30px;
 }
@@ -183,7 +189,7 @@
 	color: orange;
 }
 .downvoted {
-	color: rgb(113,147,255);
+	color: rgb(113, 147, 255);
 }
 
 .image-box {
@@ -229,14 +235,14 @@
 	align-items: center;
 	position: relative;
 }
-.fa-align-justify, .fa-link {
+.fa-align-justify,
+.fa-link {
 	margin: 0px;
 	padding: 0px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-
 
 .fa-arrow-up-right-from-square {
 	position: absolute;
@@ -245,5 +251,5 @@
 	right: 0%;
 	margin: 0px;
 	padding: 0px;
-	color: rgb(16,129,213);
+	color: rgb(16, 129, 213);
 }
