--- a/react-app/src/components/NavBar/css/index.css
+++ b/react-app/src/components/NavBar/css/index.css
@@ -155,3 +155,44 @@ a {
 	cursor: auto;
 	line-height: 16px;
 }
+.login-signup-container {
+	display: flex;
+	width: fit-content;
+	gap: 10px;
+	margin-right: 15px;
+}
+
+.login-button {
+	line-height: 24px;
+	padding: 4px 16px;
+	width: 120px;
+	border-radius: 9999px;
+	border: none;
+	background-color: white;
+	border: solid 1px rgb(0, 121, 211);
+	box-sizing: border-box;
+	color: rgb(0, 121, 211);
+	font-weight: 700;
+	font-size: 14px;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.signup-button {
+	line-height: 24px;
+	padding: 4px 16px;
+	width: 120px;
+	border-radius: 9999px;
+	border: none;
+	background-color: rgb(0, 121, 211);
+	color: white;
+	font-weight: 700;
+	font-size: 14px;
+	cursor: pointer;
+}
+
+.login-signup-menu {
+	display: flex;
+}
