--- a/react-app/src/components/ErrorPages/index.css
+++ b/react-app/src/components/ErrorPages/index.css
@@ -2,7 +2,7 @@
 	background-color: rgb(255, 255, 255);
 	width: 100vw;
 	height: 100vh;
-	overflow-y: hidden;
+	/* overflow-y: hidden; */
 }
 
 .no-permission-container {
