--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -15,13 +15,15 @@
 	width: fit-content;
 	margin-top: 20px;
 	gap: 20px;
+	width: 70%;
 }
 
 .subreddit-posts {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	width: 100%;
+	max-width: 640px;
 	row-gap: 15px;
 }
 
@@ -155,15 +157,16 @@ h1 {
 	border-radius: 4px;
 	display: flex;
 	min-height: 140px;
-	margin-right: 30px;
-	max-width: 640px;
+	width: 640px;
+	width: 100%;
+	border-radius: 4px;
 }
 
 .sub-post-info-container {
 	padding: 5px;
 	display: flex;
 	justify-content: flex-start;
-	width: 100%;
+	width: 90%;
 }
 
 .sub-post-info {
@@ -184,6 +187,8 @@ h1 {
 	justify-content: flex-start;
 	padding-top: 10px;
 	box-sizing: border-box;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
 }
 
 .fa-arrow-down,
@@ -215,9 +220,25 @@ h1 {
 }
 
 .sub-text-box {
-	max-width: 90%;
+	max-width: 100%;
 	word-wrap: break-word;
 	max-height: 300px;
 	overflow: hidden;
 	font-size: 14px;
+	word-wrap: break-word;
+}
+
+.sub-post-text {
+	margin-left: 5px;
+	margin-bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	word-wrap: break-word;
+	max-width: 100%;
+}
+
+@media screen and (max-width: 1100px) {
+	.subreddit-info {
+		display: none;
+	}
 }
