--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -157,7 +157,7 @@ h1 {
 	border-radius: 4px;
 	display: flex;
 	min-height: 140px;
-	width: 640px;
+	min-width: 640px;
 	width: 100%;
 	border-radius: 4px;
 }
