--- a/react-app/src/components/SinglePost/css/index.css
+++ b/react-app/src/components/SinglePost/css/index.css
@@ -3,6 +3,7 @@
 	width: 100%;
 	justify-content: center;
 	align-items: flex-start;
+
 	margin-top: 20px;
 	gap: 25px;
 }
@@ -11,6 +12,7 @@
 	width: fit-content;
 	display: flex;
 	justify-content: center;
+	/* flex-direction: row; */
 	align-items: center;
 	background-color: white;
 	border-radius: 4px;
@@ -38,11 +40,19 @@
 }
 .single-post-bottom-bar {
 	display: flex;
+	height: fit-content;
+	font-size: 10px;
+	justify-content: flex-start;
+	align-items: center;
+	margin-left: 10px;
+	gap: 10px;
 }
 .single-post-comments-count,
 .share {
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 .fa-message,
 .fa-share {
@@ -51,4 +61,9 @@
 	align-items: center;
 	padding: 0px;
 	margin: 0px;
+}
+
+.sub-post-info-container {
+	display: flex;
+	flex-direction: column;
 }
