--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -235,6 +235,17 @@ h1 {
 	flex-direction: column;
 	word-wrap: break-word;
 	max-width: 100%;
+	gap: 5px;
+}
+
+.sub-post-time.username {
+	font-size: 12px;
+	color: rgb(155, 155, 155);
+}
+
+.username:hover {
+	text-decoration: underline;
+	
 }
 
 @media screen and (max-width: 1100px) {
