--- a/react-app/src/components/HomePage/index.css
+++ b/react-app/src/components/HomePage/index.css
@@ -1,6 +1,50 @@
 .home-sub-list {
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-    font-size: 40px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin: 20px;
+	font-size: 20px;
+	background-color: white;
+	width: 310px;
+	height: fit-content;
+	border-radius: 4px;
+}
+
+.reccomended-container {
+	display: flex;
+	justify-content: space-between;
+	border-top: solid 1px grey;
+	height: 50px;
+	min-height: 50px;
+}
+
+.reccomended-title {
+	background-color: rgb(0, 121, 211);
+	color: white;
+	padding: 10px;
+	box-sizing: border-box;
+	width: 310px;
+	height: 80px;
+	min-height: 80px;
+	border-top-right-radius: 4px;
+	border-top-left-radius: 4px;
+	display: flex;
+	align-items: flex-end;
+}
+
+.reccomended-subs-container {
+	width: 100%;
+	height: fit-content;
+	display: flex;
+	flex-direction: column;
+	border-bottom: solid 1px grey;
+	border-radius: 4px;
+}
+
+.reccomended-content {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	box-sizing: border-box;
+	padding: 5px 20px;
 }
