--- a/react-app/src/components/Profile/css/index.css
+++ b/react-app/src/components/Profile/css/index.css
@@ -140,6 +140,7 @@
 	width: 80%;
 
 	margin-top: 20px;
+	margin-bottom: 100px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
