--- a/react-app/src/components/SinglePost/css/index.css
+++ b/react-app/src/components/SinglePost/css/index.css
@@ -38,6 +38,11 @@
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
 }
+
+.single-post-details {
+	width: 93%;
+}
+
 .single-post-bottom-bar {
 	display: flex;
 	height: fit-content;
