--- a/react-app/src/components/NavBar/css/index.css
+++ b/react-app/src/components/NavBar/css/index.css
@@ -14,7 +14,6 @@
 .nav-logo {
 	height: 32px;
 	border: none;
-	
 }
 
 .nav-login-signup-container {
@@ -38,7 +37,7 @@
 
 .profile-toggle:hover,
 .active {
-	border: solid 1px rgb(242, 243, 245);
+	/* border: solid 1px rgb(242, 243, 245); */
 	box-sizing: border-box;
 }
 
@@ -196,8 +195,38 @@ a {
 
 .login-signup-menu {
 	display: flex;
+	align-items: center;
+	gap: 20px;
 }
 
+.submit-post-link {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.fa-thin.fa-plus {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0px;
+	margin: 0px;
+	height: 32px;
+	width: 32px;
+	font-size: 32px;
+}
+.fa-thin.fa-plus::before {
+	padding: 0px;
+	margin: 0px;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.fa-thin.fa-plus:hover {
+	background-color: rgb(235, 235, 235);
+}
 @media screen and (max-width: 1100px) {
 	.subreddit-info {
 		display: none;
