--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -104,9 +104,26 @@ h1 {
 	padding: 12px 12px 12px 12px;
 	background-color: rgb(0, 121, 211);
 	color: white;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	font-size: 14px;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
+}
+
+.mod-tools-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	padding: 3px;
+	border-radius: 4px;
+	color: white;
+}
+
+.mod-tools-container:hover {
+	background-color: rgb(4, 111, 192);
 }
 
 .subreddit-info-card-info,
@@ -146,7 +163,8 @@ h1 {
 	border-top: solid 1px rgb(204, 204, 204);
 }
 
-.fa-cake-candles {
+.fa-cake-candles,
+.fa-shield {
 	margin: 0px;
 	margin-right: 5px;
 	padding: 0px;
@@ -154,7 +172,9 @@ h1 {
 	justify-content: center;
 	align-items: center;
 }
-
+.fa-shield {
+	font-size: 20px;
+}
 .sub-post-container {
 	border: solid 1px rgb(204, 204, 204);
 	background-color: white;
