--- a/react-app/src/components/SubredditEdit/index.css
+++ b/react-app/src/components/SubredditEdit/index.css
@@ -178,3 +178,13 @@
 .hide {
 	display: none;
 }
+
+
+.fa-gear {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0px;
+	margin: 0px;
+	margin-right: 10px;
+}
