--- a/react-app/src/components/SubredditEdit/index.css
+++ b/react-app/src/components/SubredditEdit/index.css
@@ -37,7 +37,7 @@
 }
 
 .edit-subreddit-sidebar {
-	width: 25%;
+	width: 33%;
 	background-color: rgb(246, 247, 248);
 	max-width: 280px;
 }
@@ -101,6 +101,7 @@
 .no-rules-placeholder {
 	background-color: white;
 	width: 100%;
+	min-width: 100%;
 	height: 288px;
 	display: flex;
 	justify-content: center;
@@ -116,14 +117,15 @@
 }
 
 .edit-subreddit-main-content.rules {
-	width: 90%;
+	width: 100%;
 	display: flex;
-
 	align-items: flex-start;
 }
 
 .rules-header-details {
 	width: 90%;
+	word-wrap: break-word;
+	white-space: pre-wrap;
 }
 
 .edit-subreddit-header.rules {
@@ -139,6 +141,7 @@
 .edit-subreddit-rules-map {
 	border-radius: 4px;
 	width: 100%;
+
 	display: flex;
 	flex-direction: column;
 	gap: 1px;
@@ -152,7 +155,7 @@
 	align-items: center;
 }
 .rule-title {
-	height: 51px;
+	max-height: 51px;
 	padding: 10px;
 	width: 100%;
 	border-radius: 4px;
@@ -163,7 +166,14 @@
 .sub-rule-details {
 	width: 99.9%;
 	padding: 10px;
+
 	background-color: rgb(237, 239, 241);
+}
+
+.sub-rule {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .toggle-rule-detail {
@@ -220,4 +230,113 @@
 
 .rule-interact {
 	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.fa-up-right-and-down-left-from-center,
+.fa-pencil,
+.fa-trash-can.interactive {
+	cursor: pointer;
+	padding: 0px;
+	margin: 0px;
+	/* color: rgb(128, 128, 128); */
+}
+
+.interactive.fa-trash-can:hover {
+	color: red;
+}
+
+.rules-main-container {
+	width: 100%;
+}
+
+.rule-index-edit {
+	margin-right: 18px;
+	padding: 10px;
+}
+
+.delete-sub {
+	color: red;
+}
+
+.delete-sub-container-main {
+	/* background-color: white; */
+	width: 100%;
+	height: 100%;
+	padding-left: 20px;
+	padding-top: 15px;
+}
+
+.delete-sub-container {
+	background-color: white;
+	width: 808px;
+	height: 500px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.delete-sub-title {
+	color: red;
+}
+.delete-sub-subtitle {
+	font-size: 24px;
+}
+.delete-sub-details {
+	max-width: 70%;
+}
+
+.delete-sub-button {
+	width: 150px;
+	height: 40px;
+	border-radius: 4px;
+	border: solid 1px red;
+	color: red;
+	background-color: white;
+	cursor: pointer;
+}
+
+.delete-sub-button:hover,
+.sub-delete-confirm-button:hover {
+	background-color: red;
+	color: black;
+}
+
+.sub-delete-modal-container {
+	width: 500px;
+	height: 500px;
+	background-color: white;
+
+	border-radius: 4px;
+	padding: 5px;
+	display: flex;
+	justify-content: center;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 40px;
+}
+.delete-sub-final-confirm {
+	font-size: 24px;
+}
+.sub-delete-cancel-button {
+	font-size: 20px;
+	cursor: pointer;
+	border-radius: 4px;
+	border: solid 1px grey;
+	padding: 5px;
+	background-color: white;
+}
+.sub-delete-confirm-button {
+	font-size: 20px;
+	width: 200px;
+	height: 40px;
+	border-radius: 4px;
+	border: solid 1px red;
+	color: red;
+	background-color: white;
+	cursor: pointer;
 }
