--- a/react-app/src/components/SubredditEdit/index.css
+++ b/react-app/src/components/SubredditEdit/index.css
@@ -290,7 +290,7 @@
 }
 
 .delete-sub-button {
-	width: 150px;
+	width: fit-content;
 	height: 40px;
 	border-radius: 4px;
 	border: solid 1px red;
@@ -311,7 +311,7 @@
 	background-color: white;
 
 	border-radius: 4px;
-	padding: 5px;
+	padding: 10px;
 	display: flex;
 	justify-content: center;
 	justify-content: center;
@@ -321,6 +321,7 @@
 }
 .delete-sub-final-confirm {
 	font-size: 24px;
+	text-align: center;
 }
 .sub-delete-cancel-button {
 	font-size: 20px;
@@ -332,7 +333,7 @@
 }
 .sub-delete-confirm-button {
 	font-size: 20px;
-	width: 200px;
+	width: fit-content;
 	height: 40px;
 	border-radius: 4px;
 	border: solid 1px red;
