--- a/react-app/src/components/Subreddit/css/index.css
+++ b/react-app/src/components/Subreddit/css/index.css
@@ -203,10 +203,9 @@ h1 {
 }
 
 .votes-container {
-	width: 32px;
-	height: 100%;
+	width: 40px;
 	min-height: 72px;
-	min-width: 32px;
+	min-width: 40px;
 	display: flex;
 
 	justify-content: flex-start;
@@ -241,17 +240,17 @@ h1 {
 	align-items: center;
 }
 
-.sub-text-box {
-	padding-left: 10px;
-	padding-top: 10px;
-}
-
 .sub-post-title {
 	max-width: 90%;
 	word-wrap: break-word;
+	font-family: "IBM Plex Sans Medium", sans-serif;
+	font-size: 18px;
+	font-weight: 500;
 }
 
 .sub-text-box {
+	padding-left: 10px;
+	padding-top: 10px;
 	max-width: 100%;
 	word-wrap: break-word;
 	max-height: 300px;
@@ -270,11 +269,17 @@ h1 {
 	gap: 5px;
 }
 
+.sub-post-time.subreddit {
+	font-size: 12px;
+	font-family: "IBM Plex Sans Bold", sans-serif;
+}
+
 .sub-post-time.username {
+	font-family: "IBM Plex Sans", sans-serif;
 	font-size: 12px;
 	color: rgb(155, 155, 155);
 }
-
+.subreddit:hover,
 .username:hover {
 	text-decoration: underline;
 }
