--- a/react-app/src/components/PostForm/css/index.css
+++ b/react-app/src/components/PostForm/css/index.css
@@ -141,13 +141,30 @@
 	width: 298px;
 	height: 38px;
 	box-sizing: border-box;
+	cursor: pointer;
 }
 
 .image-form-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 58px;
+	min-height: 58px;
+}
+.preview-image-upload {
+	width: 200px;
+	margin-left: 20px;
+	border-radius: 4px;
+	border: solid 2px rgb(0, 121, 211);
+}
+
+.image-upload-name {
+	max-width: 200px;
+	white-space: pre-wrap;
+	word-break: break-all;
+	padding: 5px;
+}
+.image-upload-info {
+	margin-left: 10px;
 }
 
 .fa-align-justify,
