--- a/react-app/src/components/HomePage/index.css
+++ b/react-app/src/components/HomePage/index.css
@@ -42,6 +42,11 @@
 	align-items: center;
 }
 
+.reccomended-sub-name:hover {
+	text-decoration: underline;
+	color: rgb(0, 121, 211);
+}
+
 .reccomended-subs-container {
 	width: 100%;
 	height: fit-content;
@@ -54,6 +59,7 @@
 .reccomended-content {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	width: 100%;
 	box-sizing: border-box;
 	padding: 5px 20px;
@@ -81,4 +87,13 @@
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
+}
+
+
+.sub-home-link {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: fit-content
+	
 }
