--- a/react-app/src/components/About/footer.css
+++ b/react-app/src/components/About/footer.css
@@ -24,7 +24,7 @@
 	justify-content: center;
 	align-items: center;
 	gap: 50px;
-	width: 25%;
+	width: fit-content;
 	padding: 3px;
 	color: black;
 }
