vote changes will render across components properly

--- a/react-app/src/components/Profile/css/index.css
+++ b/react-app/src/components/Profile/css/index.css
@@ -368,3 +368,12 @@
 	gap: 10px;
 	position: relative;
 }
+
+.placeholder-posts-container-main {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	height: fit-content;
+	/* background-color: slightgrey; */
+	position: relative;
+}
