--- a/react-app/src/components/HomePage/index.css
+++ b/react-app/src/components/HomePage/index.css
@@ -89,11 +89,44 @@
 	gap: 15px;
 }
 
-
 .sub-home-link {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: fit-content
-	
+	height: fit-content;
+}
+
+.homepage-no-posts-container {
+	width: 100%;
+	height: 500px;
+	background-color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.splash-info-container {
+	margin: auto;
+	background-color: white;
+	width: 50%;
+	height: fit-content;
+	padding: 25px;
+	border-radius: 4px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.splash-info-content {
+	font-family: "IBM Plex Sans Medium Bold", sans-serif;
+}
+
+.splash-about {
+	text-decoration: underline;
+}
+
+.splash-about:hover {
+	color: rgb(0, 121, 211);
 }
