--- a/react-app/src/components/Profile/css/index.css
+++ b/react-app/src/components/Profile/css/index.css
@@ -138,7 +138,7 @@
 	margin: auto;
 	max-width: 80%;
 	width: 80%;
-
+	gap: 80px;
 	margin-top: 20px;
 	margin-bottom: 100px;
 	display: flex;
@@ -371,9 +371,17 @@
 
 .placeholder-posts-container-main {
 	width: 100%;
+	max-width: 100%;
 	display: flex;
 	justify-content: center;
 	height: fit-content;
 	/* background-color: slightgrey; */
 	position: relative;
+}
+
+
+@media screen and (max-width:1300px) {
+	.user-info-main-container {
+		display: none;
+	}
 }
