Added no votes placeholder

--- a/react-app/src/components/Profile/css/index.css
+++ b/react-app/src/components/Profile/css/index.css
@@ -379,8 +379,26 @@
 	position: relative;
 }
 
+.no-votes-container {
+	width: 100%;
+	height: 80vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
-@media screen and (max-width:1300px) {
+.no-votes-text {
+	background-color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	font-size: 24px;
+	border-radius: 4px;
+}
+
+@media screen and (max-width: 1300px) {
 	.user-info-main-container {
 		display: none;
 	}
