--- a/react-app/src/components/Profile/css/index.css
+++ b/react-app/src/components/Profile/css/index.css
@@ -381,7 +381,7 @@
 
 .no-votes-container {
 	width: 100%;
-	height: 80vh;
+	height: 40vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -394,8 +394,12 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
-	font-size: 24px;
+	font-size: 34px;
 	border-radius: 4px;
+}
+
+#empty-post-big-text {
+	font-size: 30px;
 }
 
 @media screen and (max-width: 1300px) {
